# snake-game-cpp

./: CMakeLists.txt  README.md
src/: snake.cpp
